<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/titulo_chamado"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/titulo_chamado_label"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/descricao_chamado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/descricao_chamado_label"
        />

</LinearLayout>
    <TextView
        android:id="@+id/label_text_responsável"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="Responsável"
        android:paddingLeft="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">



        <Spinner
        android:id="@+id/responsavel_chamado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
    <TextView
        android:id="@+id/label_text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="Status"
        android:layout_below="@+id/status_chamado"
        android:paddingLeft="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Spinner
        android:id="@+id/status_chamado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

    <TextView
        android:id="@+id/label_text_prioridade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="Prioridade"
        android:paddingLeft="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">



        <Spinner
        android:id="@+id/prioridade_chamado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_chamado_cancelar"
        android:onClick="backToMenu"
        />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick=""
            android:text="@string/label_criar_chamado" />


    </LinearLayout>

</LinearLayout>